--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@200;300;400;500&family=Rajdhani:wght@300;400;500&display=swap');
+
 *,
 :root {
   user-select: none;
@@ -172,6 +174,7 @@ body {
 }
 
 .footer .word {
+  
   text-transform: uppercase;
   font-family: rajdhani;
   color: transparent;
@@ -181,19 +184,19 @@ body {
   background-clip: text;
   background-color: #565656;
   text-align: center;
+  font-size: 1.5rem;
 }
 
 @media (min-width: 1000px) {
   .footer {
     transition: var(--trans);
-    font-size: 3rem;
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
   }
 }
 
 @media (max-width: 1000px) {
   .footer {
-    font-size: 2rem;
+    
     margin-bottom: 1rem;
   }
 }
